--- a/src/components/searchbox.css
+++ b/src/components/searchbox.css
@@ -10,7 +10,7 @@
         margin-bottom: auto;
         margin-top: auto;
         height: 60px;
-        background-color: #353b48;
+        background-color: rgba(110, 15, 192, 0.6);
         border-radius: 30px;
         padding: 10px;
         }
